--- a/Solutions-1.ipynb
+++ b/Solutions-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,13 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -90,43 +103,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tomorrow Ends at Dawn</td>\n",
-       "      <td>2002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Brothers of the West</td>\n",
-       "      <td>1937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Nemo</td>\n",
-       "      <td>1984</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Pereezd</td>\n",
+       "      <td>Narcissists</td>\n",
        "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celebici</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dregs of Society</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Patsamba-tsamba</td>\n",
+       "      <td>1964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bad for Business</td>\n",
-       "      <td>2007</td>\n",
+       "      <td>Watching Eyes</td>\n",
+       "      <td>1921</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   title  year\n",
-       "0  Tomorrow Ends at Dawn  2002\n",
-       "1   Brothers of the West  1937\n",
-       "2                   Nemo  1984\n",
-       "3                Pereezd  2014\n",
-       "4       Bad for Business  2007"
+       "              title  year\n",
+       "0       Narcissists  2014\n",
+       "1          Celebici  2008\n",
+       "2  Dregs of Society  2010\n",
+       "3   Patsamba-tsamba  1964\n",
+       "4     Watching Eyes  1921"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,13 +151,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -160,47 +186,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Closet Monster</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Buffy #1</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Buffy 4</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>Suuri illusioni</td>\n",
        "      <td>1985</td>\n",
        "      <td>Homo $</td>\n",
        "      <td>actor</td>\n",
        "      <td>Guests</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Gangsta Rap: The Glockumentary</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>Too $hort</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Himself</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Menace II Society</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>Too $hort</td>\n",
+       "      <td>Battle of the Sexes</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>$hutter</td>\n",
        "      <td>actor</td>\n",
-       "      <td>Lew-Loc</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Bobby Riggs Fan</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Porndogs: The Adventures of Sadie</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>Too $hort</td>\n",
+       "      <td>Secret in Their Eyes</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>$hutter</td>\n",
        "      <td>actor</td>\n",
-       "      <td>Bosco</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2002 Dodger Fan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Stop Pepper Palmer</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>Too $hort</td>\n",
+       "      <td>Steve Jobs</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>$hutter</td>\n",
        "      <td>actor</td>\n",
-       "      <td>Himself</td>\n",
+       "      <td>1988 Opera House Patron</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -208,15 +234,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                               title  year       name   type character   n\n",
-       "0                    Suuri illusioni  1985     Homo $  actor    Guests  22\n",
-       "1     Gangsta Rap: The Glockumentary  2007  Too $hort  actor   Himself NaN\n",
-       "2                  Menace II Society  1993  Too $hort  actor   Lew-Loc  27\n",
-       "3  Porndogs: The Adventures of Sadie  2009  Too $hort  actor     Bosco   3\n",
-       "4                 Stop Pepper Palmer  2014  Too $hort  actor   Himself NaN"
+       "                  title  year      name   type                character     n\n",
+       "0        Closet Monster  2015  Buffy #1  actor                  Buffy 4  31.0\n",
+       "1       Suuri illusioni  1985    Homo $  actor                   Guests  22.0\n",
+       "2   Battle of the Sexes  2017   $hutter  actor          Bobby Riggs Fan  10.0\n",
+       "3  Secret in Their Eyes  2015   $hutter  actor          2002 Dodger Fan   NaN\n",
+       "4            Steve Jobs  2015   $hutter  actor  1988 Opera House Patron   NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "209286"
+       "226013"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,13 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -267,26 +306,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2756</th>\n",
+       "      <th>15603</th>\n",
        "      <td>Miss Jerry</td>\n",
        "      <td>1894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132322</th>\n",
-       "      <td>Reproduction of the Corbett and Fitzsimmons Fight</td>\n",
-       "      <td>1897</td>\n",
+       "      <th>57780</th>\n",
+       "      <td>The Startled Lover</td>\n",
+       "      <td>1898</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    title  year\n",
-       "2756                                           Miss Jerry  1894\n",
-       "132322  Reproduction of the Corbett and Fitzsimmons Fight  1897"
+       "                    title  year\n",
+       "15603          Miss Jerry  1894\n",
+       "57780  The Startled Lover  1898"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
