modified:   Exercises-2.ipynb

--- a/Exercises-2.ipynb
+++ b/Exercises-2.ipynb
@@ -42,7 +42,7 @@
        "}\n",
        "table.dataframe tr:nth-child(2) th:empty {\n",
        "    border-left: none;\n",
-       "    border-right: 1px dashed #888;\n",
+       "    border-right: 1px dashed #c22c2c;\n",
        "}\n",
        "table.dataframe td {\n",
        "    border: 2px solid #ccf;\n",
@@ -103,40 +103,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>The Rising Son</td>\n",
-       "      <td>1990</td>\n",
+       "      <td>Narcissists</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>The Thousand Plane Raid</td>\n",
-       "      <td>1969</td>\n",
+       "      <td>Celebici</td>\n",
+       "      <td>2008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>The Spider and the Fly</td>\n",
-       "      <td>1949</td>\n",
+       "      <td>Dregs of Society</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>2000</td>\n",
+       "      <td>Patsamba-tsamba</td>\n",
+       "      <td>1964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>The Golden Note</td>\n",
-       "      <td>2017</td>\n",
+       "      <td>Watching Eyes</td>\n",
+       "      <td>1921</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     title  year\n",
-       "0           The Rising Son  1990\n",
-       "1  The Thousand Plane Raid  1969\n",
-       "2   The Spider and the Fly  1949\n",
-       "3                  Country  2000\n",
-       "4          The Golden Note  2017"
+       "              title  year\n",
+       "0       Narcissists  2014\n",
+       "1          Celebici  2008\n",
+       "2  Dregs of Society  2010\n",
+       "3   Patsamba-tsamba  1964\n",
+       "4     Watching Eyes  1921"
       ]
      },
      "execution_count": 3,
@@ -764,6 +764,272 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10490</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11599</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39434</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44802</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46080</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54935</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58070</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63449</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75967</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90305</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99204</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114323</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139275</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148469</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150502</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164289</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178633</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200540</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210052</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215410</th>\n",
+       "      <td>Hamlet</td>\n",
+       "      <td>1921</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         title  year\n",
+       "10490   Hamlet  1910\n",
+       "11599   Hamlet  1913\n",
+       "39434   Hamlet  1996\n",
+       "44802   Hamlet  2000\n",
+       "46080   Hamlet  2009\n",
+       "54935   Hamlet  1954\n",
+       "58070   Hamlet  2011\n",
+       "63449   Hamlet  2015\n",
+       "75967   Hamlet  1976\n",
+       "90305   Hamlet  1948\n",
+       "99204   Hamlet  2016\n",
+       "114323  Hamlet  2014\n",
+       "139275  Hamlet  1964\n",
+       "148469  Hamlet  1969\n",
+       "150502  Hamlet  1911\n",
+       "164289  Hamlet  1987\n",
+       "178633  Hamlet  1990\n",
+       "200540  Hamlet  1973\n",
+       "210052  Hamlet  2017\n",
+       "215410  Hamlet  1921"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = titles\n",
+    "c[c.title == 'Hamlet']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Hamle'.startswith('H')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -782,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
